feat: update team name AYC-55
