# ayunis-core-backend/src/iam/teams/presenters/http/dtos/update-team.dto.ts
@@ -1,0 +1,14 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, IsNotEmpty, MaxLength, MinLength } from 'class-validator';
+
+export class UpdateTeamDto {
+  @ApiProperty({
+    description: 'The new name of the team',
+    example: 'Engineering',
+  })
+  @IsString()
+  @IsNotEmpty()
+  @MinLength(1)
+  @MaxLength(100)
+  name: string;
+}
